--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
                   <form>
                     <div class="field has-addons chat">
                       <p class="control">
-                        <input class="input" type="text" value="Aquarius" id="name">
+                        <input class="input" type="text" id="name" disabled>
                       </p>
                       <p class="control is-expanded">
                         <input class="input" type="text" placeholder="Try to say something" id="message" name="message">
